tests/purs/failing/InvalidViaKind.out
Error found:
in module [33mMain[0m
at tests/purs/failing/InvalidViaKind.purs:12:1 - 12:32 (line 12, column 1 - line 12, column 32)

  Cannot derive instance via [33mV[0m for
  [33m          [0m
  [33m  Main.C D[0m
  [33m          [0m
  because [33mD[0m has kind [33mType[0m but [33mV[0m has kind [33mforall k. k -> Type[0m.


See https://github.com/purescript/documentation/blob/master/errors/InvalidViaKind.md for more information,
or to contribute content related to this error.

